tests/ui/reborrow/corrected-field-mismatch-coerce-shared-issue-156315.stderr
error[E0277]: the trait bound `&'a mut T: CoerceShared<&'a CustomMut<'a, T>>` is not satisfied
  --> $DIR/corrected-field-mismatch-coerce-shared-issue-156315.rs:13:1
   |
LL | impl<'a, T> CoerceShared<CustomRef<'a, T>> for CustomMut<'a, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the nightly-only, unstable trait `CoerceShared<&'a CustomMut<'a, T>>` is not implemented for `&'a mut T`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
